updated blog page due to display issues on firefox

--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -26,7 +26,6 @@
       flex-direction: row;
       flex-wrap: wrap;
       img {
-          width: 30%;
           align-self: center;
         }
       .entry {
